# shufflr

./: distributr.py  pyproject.toml  shufflr.py
