[tool.poetry]
name = "shufflr"
version = "0.1.0"
description = ""
authors = ["weykent <weykent@cutefox.pictures>"]

[tool.poetry.dependencies]
python = "^3.6"
click = "^7.0"
pytumblr = "^0.0.8"
uhashring = "^1.1"
pendulum = "^2.0"
tqdm = "^4.28"

[tool.poetry.dev-dependencies]
pylint = "^2.2.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
